@@ -1,39 +1,0 @@
-%% As defined by PDF 1.3, but with /currency replaced by /Euro as per Apple
-/MacRomanEncoding [
-  /.notdef /.notdef   /.notdef   /.notdef /.notdef /.notdef  /.notdef /.notdef
-  /.notdef /.notdef   /.notdef   /.notdef /.notdef /.notdef  /.notdef /.notdef
-  /.notdef /.notdef   /.notdef   /.notdef /.notdef /.notdef  /.notdef /.notdef
-  /.notdef /.notdef   /.notdef   /.notdef /.notdef /.notdef  /.notdef /.notdef
-%%   040
-/space /exclam /quotedbl /numbersign /dollar /percent /ampersand 
-/quoteright /parenleft /parenright /asterisk /plus /comma /hyphen /period /slash
-%%   060
-/zero /one /two /three /four /five /six /seven /eight /nine 
-/colon /semicolon /less /equal /greater /question
-%%  0100
-/at /A /B /C /D /E /F /G /H /I /J /K /L /M /N /O /P /Q /R /S /T /U /V 
-/W /X /Y /Z /bracketleft /backslash /bracketright /asciicircum /underscore
-%%  0140
-/grave /a /b /c /d /e /f /g /h /i /j /k /l /m /n /o /p /q /r /s /t 
-/u /v /w /x /y /z /braceleft /bar /braceright /asciitilde /.notdef
-%%  0200
-/Adieresis /Aring /Ccedilla /Eacute /Ntilde /Odieresis /Udieresis /aacute 
-/agrave /acircumflex /adieresis /atilde /aring /ccedilla /eacute /egrave
-%%  0220
-/ecircumflex /edieresis /iacute /igrave /icircumflex /idieresis /ntilde /oacute
-/ograve /ocircumflex /odieresis /otilde /uacute /ugrave /ucircumflex /udieresis
-%%  0240
-/dagger /degree /cent /sterling /section /bullet /paragraph /germandbls
-/registered /copyright /trademark /acute /dieresis /.notdef /AE /Oslash
-/.notdef /plusminus /.notdef /.notdef /yen /mu /.notdef /.notdef
-/.notdef /.notdef /.notdef /ordfeminine /ordmasculine /.notdef /ae /oslash
-%%  0300
-/questiondown /exclamdown /logicalnot /.notdef /florin /.notdef /.notdef /guillemotleft
-/guillemotright /ellipsis /space /Agrave /Atilde /Otilde /OE /oe
-/endash /emdash /quotedblleft /quotedblright /quoteleft /quoteright /divide /.notdef
-/ydieresis /Ydieresis /fraction /Euro /guilsinglleft /guilsinglright /fi /fl
-/daggerdbl /periodcentered /quotesinglbase /quotedblbase  /perthousand /Acircumflex /Ecircumflex /Aacute
-/Edieresis /Egrave /Iacute /Icircumflex /Idieresis /Igrave /Oacute /Ocircumflex
-/.notdef /Ograve /Uacute /Ucircumflex /Ugrave /dotlessi /circumflex /tilde
-/macron /breve /dotaccent /ring /cedilla /hungarumlaut /ogonek /caron
-]
